--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
-hi ms remess
+<!DOCTYPE html>
+<html>
+   <head>
+      <!-- linking to style.css and google fonts-->
+      <title>Mateo's Portfolio</title>
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+      <link href="style.css" rel="stylesheet">
+   </head>
+   <body>
+      <nav class="navbar navbar-light bg-light">
+         <div class="container-fluid">
+            <a href="https://image.shutterstock.com/image-photo/businessman-waving-260nw-112689389.jpg"><span class="navbar-brand mb-0 h1">hello</span></a>
+         </div>
+      </nav>
+      <table width="100%" border="0" cellspacing="0" class="bar">
+         <tr>
+            <th><a href="./index.html">Introduction</a></th>
+            <th><a href="./careerinterests.html">Career Interests</a></th>
+            <th><a href="./pagethree.html">other stuff</a></th>
+         </tr>
+      </table>
+      <div class="border1">
+         <h1 class="text-center fw-bolder">Welcome to my website</h1>
+      </div>
+      <img src="https://uploads.codehs.com/d751312801aec89457ee7b0842d5c2f9" alt="my profile picture" class="picture"}
+      <br>
+      <p class="text-center text-danger" >Hello! My name is Mateo, and this is my portfolio. I'll be updating this website as I learn more about HTML and CSS.</p>
+      <p class="text-center fw-bolder text-danger">I like to do things like</p>
+      <ul class="text-danger">
+         <li>Play Magic The Gathering</li>
+         <li>Code in HTML</li>
+         <li>Play video games with friends</li>
+         <li>sleep</li>
+         <li>Draw poorly</li>
+      </ul>
+      <div class="container-fluid">
+         <div class="row">
+            <div class="col-sm-6">
+               <p class="text-center text-danger" style="padding-top: 50px;">On this website, you'll find various things that I've made with HTML and CSS. This is to display how much I've learned throughout my time with HTML and CSS. Here's an example.</p>
+            </div>
+            <div class="col-sm-6">
+               <h3 class="text-center fw-bolder">This week's calendar</h3>
+               <table border="2" class="text-center fw-bolder">
+                  <tr>
+                     <th>Monday</th>
+                     <th>Tuesday</th>
+                     <th>Wednesday</th>
+                     <th>Thursday</th>
+                     <th>Friday</th>
+                  </tr>
+                  <tr>
+                     <td>
+                        <ul>
+                           <li id="club">MTG or Games Club</li>
+                        </ul>
+                     </td>
+                     <td></td>
+                     <td>
+                        <ul>
+                           <li id="bell"><a href="https://lanetech.org/about/bell-schedule/" target="_blank">Advisory Bell Schedule</a></li>
+                           <li id="club">ASL Club</li>
+                        </ul>
+                     </td>
+                     <td>
+                        <ul>
+                           <li id="club">Horror Movie Club</li>
+                        </ul>
+                     </td>
+                     <td>
+                        <ul>
+                           <li>Do rest of homework over weekend</li>
+                        </ul>
+                     </td>
+                  </tr>
+               </table>
+            </div>
+         </div>
+      </div>
+   </body>
+</html>
